Squashed commit of the following:
commit 34f546d5f489f61177f5b2b10cc6c1e635f665f2
Author: tym <1772314831@qq.com>
Date:   Mon Jan 21 23:34:16 2019 +0800

    sitemap

commit e69a5a2217c92a7a3c34d2c5435b7b53de703683
Author: tym <1772314831@qq.com>
Date:   Mon Jan 21 22:59:32 2019 +0800

    样式优化

commit c37055fde9b23b6ab84531f98aaa428bd3977c99
Author: tym <1772314831@qq.com>
Date:   Sun Jan 6 18:09:10 2019 +0800

    自适应

commit 6136e4f7322776646f15bc47331140bddbfb29d0
Author: tym <1772314831@qq.com>
Date:   Sun Jan 6 00:32:37 2019 +0800

    功能重写

commit 437c96ee37310888799cfa0cfb71ee9b3e9d58ab
Author: tym <1772314831@qq.com>
Date:   Sat Jan 5 23:00:12 2019 +0800

    调整分类

commit 95408b0d8286004d064be528d33fe5ed5c834290
Author: tym <1772314831@qq.com>
Date:   Sat Jan 5 22:43:58 2019 +0800

    post

commit 519f4a8e2479a6da70a75f49e5e9b230f1c9c21a
Author: tym <1772314831@qq.com>
Date:   Thu Jan 3 23:46:13 2019 +0800

    page

commit 4213986916cdcf8807695e3e14317c80334b1fb8
Author: tym <1772314831@qq.com>
Date:   Thu Jan 3 00:04:14 2019 +0800

    优化

--- a/_posts/2015-01-01-主题预览.md
+++ b/_posts/2015-01-01-主题预览.md
@@ -1,33 +1,44 @@
 ---
 layout: mypost
 title: 主题预览
-categories: [jekyll]
+categories: [小技巧]
 ---
 
-# 标题测试-h1
+# 标题
 
-## 这里是h2
+## 这里是 h1
 
-### 这里是h3
+## 这里是 h2
 
-#### 这里是h4
+### 这里是 h3
 
-##### 这里是h5
+#### 这里是 h4
 
-###### 这里是h6
+##### 这里是 h5
+
+###### 这里是 h6
 
 ```
-# 标题测试-h1
+## 这里是 h1
+## 这里是 h2
+### 这里是 h3
+#### 这里是 h4
+##### 这里是 h5
+###### 这里是 h6
+```
 
-## 这里是h2
+## 段落
 
-### 这里是h3
+段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落一段落
 
-#### 这里是h4
+段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落二段落
 
-##### 这里是h5
+## 超链接
 
-###### 这里是h6
+[TMaize Blog](http://blog.tmaize.net)
+
+```
+[TMaize Blog](http://blog.tmaize.net)
 ```
 
 ## 引用
@@ -40,265 +51,139 @@ categories: [jekyll]
 
 ## 常见字体样式
 
-*斜体*
-
 _斜体_
 
 **粗体**
 
-__粗体__
+~~删除线~~
 
 ```
-*斜体*
-
 _斜体_
-
 **粗体**
-
-__粗体__
+~~删除线~~
 ```
-
-
 
 ## 列表
 
-+ 查找章节标题。
-+ 上下翻页。
-+ 记得行号，精确跳转（请收下我的膝盖）。
-+ ...
+- 无序列表 1-1
 
-1. 查找章节标题。
-2. 上下翻页。
-3. 记得行号，精确跳转（请收下我的膝盖）。
-4. ...
+  缩进 2 空格
 
-+ 项目1
-    
-    项目里面的内容
+  - 缩进 2 空格
+  - 缩进 2 空格
 
-    + 项目里面的项目
+- 无序列表 1-2
+- 无序列表 1-3
 
-        项目里面的项目的内容
+1. 有序列表 1-1
 
-```
-+ 查找章节标题。
-+ 上下翻页。
-+ 记得行号，精确跳转（请收下我的膝盖）。
-+ ...
+   缩进 3 空格
 
-1. 查找章节标题。
-2. 上下翻页。
-3. 记得行号，精确跳转（请收下我的膝盖）。
-4. ...
+   1. 缩进 3 空格
+   2. 缩进 3 空格
 
-+ 项目1
-    
-    项目里面的内容
-
-    + 项目里面的项目
-
-        项目里面的项目的内容
-```
-
-## 图片&链接测试
-
-[百度](http://baudu.com)
-
-* [百度](http://baudu.com)
-
-图片放在posts文件夹
-
-![图片测试](001.png)
+2. 有序列表 1-2
+3. 有序列表 1-3
 
 ```
-[百度](http://baudu.com)
+- 无序列表 1-1
 
-* [百度](http://baudu.com)
+  缩进 2 空格
 
-![图片测试](001.png)
+  - 缩进 2 空格
+  - 缩进 2 空格
+
+- 无序列表 1-2
+- 无序列表 1-3
+
+1. 有序列表 1-1
+
+   缩进 3 空格
+
+   1. 缩进 3 空格
+   2. 缩进 3 空格
+
+2. 有序列表 1-2
+3. 有序列表 1-3
 ```
 
-## 分割线测试
-
----
-
-***
-
-* * * 
+## 分割线
 
 ---
 
 ```
-* * *
-
-***
-
-*****
-
-- - -
-
----------------------------------------
+---
 ```
 
-## 代码测试
+## 图片
 
-看这里`function(){}`
+![测试图片](001.jpeg)
 
-```css
-#mypost .postinfo{
-    font-size: 20px;
-    margin-bottom: 40px;
-    font-weight: bold;
-}
+```
+![测试图片](001.jpeg)
+```
 
-#mypost .main{
-	font-size: 13px;
-}
+## 代码行
 
-#mypost .main p{
-    margin: 13px 0;
-}
+这是一段文字`rm -rf /*`这是一段文字
 
-#mypost .main img{
-    width: 100%;
-    height: auto;
-}
+```
+这是一段文字`rm -rf /*`这是一段文字
+```
 
-#mypost .main a{
-    color: #111;
-    cursor: auto;
-    text-decoration: underline;
-}
+## 代码块
 
-#mypost .main blockquote{
-    margin: 13px 0;
-    border-left: 3px solid #000;
-    /*text-indent: 20px;*/
-    padding-left: 13px;
+```javascript
+blog.encodeHtml = function(html) {
+  var o = document.createElement('div')
+  o.innerText = html
+  var temp = o.innerHTML
+  o = null
+  return temp
 }
 ```
 
-```
-#mypost .postinfo{
-    font-size: 20px;
-    margin-bottom: 40px;
-    font-weight: bold;
-}
-
-#mypost .main{
-	font-size: 13px;
-}
-
-#mypost .main p{
-    margin: 13px 0;
-}
-
-#mypost .main img{
-    width: 100%;
-    height: auto;
-}
-
-#mypost .main a{
-    color: #111;
-    cursor: auto;
-    text-decoration: underline;
-}
-
-#mypost .main blockquote{
-    margin: 13px 0;
-    border-left: 3px solid #000;
-    /*text-indent: 20px;*/
-    padding-left: 13px;
+````
+```javascript
+blog.encodeHtml = function(html) {
+var o = document.createElement('div')
+o.innerText = html
+var temp = o.innerHTML
+o = null
+return temp
 }
 ```
-
-```
-    `行内代码`
-    ```
-    代码块
-    ```
-    ```language
-    高亮的代码块
-    ```
-```
-
+````
 
 ## 表格测试
 
-| Tables        | Are           | Cool  |
-| ------------- |:-------------:| -----:|
+| Tables        |      Are      |   Cool |
+| ------------- | :-----------: | -----: |
 | col 3 is      | right-aligned | $1600 |
-| col 2 is      | centered      |   $12 |
-| zebra stripes | are neat      |    $1 |
+| col 2 is      |   centered    |   $12 |
+| zebra stripes |   are neat    |    $1 |
 
 ```
-| Tables        | Are           | Cool  |
-| ------------- |:-------------:| -----:|
+| Tables        |      Are      |   Cool |
+| ------------- | :-----------: | -----: |
 | col 3 is      | right-aligned | $1600 |
-| col 2 is      | centered      |   $12 |
-| zebra stripes | are neat      |    $1 |
+| col 2 is      |   centered    |   $12 |
+| zebra stripes |   are neat    |    $1 |
 ```
 
-## Html代码
+## 插入 Html
 
-直接插入，html代码不会被markdown转换
+Markdown 支持插入 Html，JS 代码，下面以 iframe 为例
 
-<style>
-    #htmldemo{
-        height: 30px;
-        width: 30px;
-        background-color: #00aa9a;
-        animation-name: moveX;
-        animation-duration: 1s;
-        animation-timing-function: linear;
-        animation-iteration-count: infinite;
-        animation-direction: alternate;
-    }
-    @keyframes moveX {
-        0%{
-            transform: translateX(0px);
-        }
-        100%{
-            transform: translateX(100px);
-        }
-    }
-</style>
-
-<div id="htmldemo">
-
-</div>
+<iframe src="//music.163.com/outchain/player?type=2&id=28445796&auto=0&height=66" frameborder="0" width="100%" height="86px" ></iframe>
 
 ```html
-<style>
-    #htmldemo{
-        height: 30px;
-        width: 30px;
-        background-color: #00aa9a;
-        animation-name: moveX;
-        animation-duration: 1s;
-        animation-timing-function: linear;
-        animation-iteration-count: infinite;
-        animation-direction: alternate;
-    }
-    @keyframes moveX {
-        0%{
-            transform: translateX(0px);
-        }
-        100%{
-            transform: translateX(100px);
-        }
-    }
-</style>
-
-<div id="htmldemo">
-
-</div>
+<!-- 属性什么的不要错了，最好用双引号括住 -->
+<!-- 网易云的iframe需要做些调整，调整如下 -->
+<iframe
+  src="//music.163.com/outchain/player?type=2&id=28445796&auto=0&height=66"
+  frameborder="0"
+  width="100%"
+  height="86px"
+></iframe>
 ```
-
-## 嵌入iframe
-
-不支持！！！
-
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=86367&auto=0&height=66"></iframe>
-
-<embed src="//music.163.com/style/swf/widget.swf?sid=86367&type=2&auto=0&width=320&height=66" width="340" height="86"  allowNetworking="all"></embed>
