--- a/_posts/2015-01-01-主题预览.md
+++ b/_posts/2015-01-01-主题预览.md
@@ -6,7 +6,7 @@ categories: [小技巧]
 
 # 标题
 
-## 这里是 h1
+# 这里是 h1
 
 ## 这里是 h2
 
@@ -19,7 +19,7 @@ categories: [小技巧]
 ###### 这里是 h6
 
 ```
-## 这里是 h1
+# 这里是 h1
 ## 这里是 h2
 ### 这里是 h3
 #### 这里是 h4
