--- a/_posts/2016-03-01-腾讯云主机初始化.md
+++ b/_posts/2016-03-01-腾讯云主机初始化.md
@@ -47,6 +47,17 @@ yum makecache
 	source /etc/sysconfig/i18n  #让修改内容立刻有效
 	```
 
++ centos7显示中文
+
+```
+# 查看系统拥有语言包,zh_CN.utf8是简体中文
+locale -a
+# 如果没有
+yum install kde-l10n-Chinese
+# 修改locale文件 LANG=zh_CN.UTF8
+vi /etc/locale.conf
+```
+
 ## 删除旧的内核
 	
 更新系统之后若更新了内核，系统并不会自动删除旧内核
