--- a/_posts/2018-01-10-vue组件学习.md
+++ b/_posts/2018-01-10-vue组件学习.md
@@ -4,24 +4,17 @@ title: Vue组件学习
 categories: [前端]
 ---
 
-## 全局组件
+## 创建组件
 
-所有的vue实例里面都可以使用
+所有的 vue 实例里面都可以使用
 
-**注意：** 2.0之后template最外层只有一个结点
+**注意：** 2.0 之后 template 最外层只有一个结点
 
 > Component template should contain exactly one root element. If you are using v-if on multiple elements, use v-else-if to chain them instead
 
-**注意：** data必须是函数
+**注意：** data 必须是函数
 
-```
-正确
-template="<div><div></div><div></div></div>"
-错误(2.0之前也可以)
-template="<div></div><div></div>"
-```
-
-组件写法1
+组件写法 1
 
 ```
 Vue.component('my-component', {
@@ -34,7 +27,7 @@ Vue.component('my-component', {
 });
 ```
 
-组件写法2
+组件写法 2
 
 ```
 var myComponent = Vue.extend({
@@ -49,11 +42,29 @@ var myComponent = Vue.extend({
 Vue.component('my-component', myComponent);
 ```
 
+# vue.extend, vue.component 区别
+
+Vue.extend 是构造一个组件的语法器
+
+Vue.component 是注册组件的，注册标签便于在模板中使用，如果不需要标签可以不注册，如一些插件直接使用代码创建实例即可
+
+```
+var apple = Vue.extend({
+    ....
+})
+// 注册组件,在模板中使用apple标签
+Vue.component('apple',apple)
+// 直接在代码中获得组件实例
+let a = new aple()
+a.$mount()
+console.log(a.$el)
+```
+
 ## 组件使用模版
 
 在组件里面用`template: '<div @click="num++">{{num}}</div>'`是不利于书写的
 
-方式1
+方式 1
 
 ```
 <script type="x-template" id="myComponent">
@@ -63,7 +74,7 @@ Vue.component('my-component', myComponent);
 template: '#myComponent'
 ```
 
-方式2
+方式 2
 
 ```
 <template id="myComponent">
@@ -97,10 +108,10 @@ template: '#myComponent'
     });
 </script>
 ```
+
 注意，组件切换是是重新渲染，数据不会保留
 
-
-如果希望保留数据,可以使用keep-alive
+如果希望保留数据,可以使用 keep-alive
 
 ```
 <keep-alive>
@@ -109,7 +120,6 @@ template: '#myComponent'
     </component>
 </keep-alive>
 ```
-
 
 ## 父子组件
 
@@ -126,7 +136,6 @@ template: '#myComponent'
 <son></son>
 </div>
 ```
-
 
 ```
 <div id="app">
@@ -157,7 +166,6 @@ template: '#myComponent'
 
 但是点击子组件，子组件改变，父组件不改变，点击一下父组件，子组件会和父组件同步。这样试图用子组件来改变父组件的数据是不行的，子组件的数据虽然变化了，但是会被父组件的变化给覆盖，而且控制台还会有警告子组件的值有会被覆盖的风险
 
-
 ![01.png](01.png)
 
 ```
@@ -180,8 +188,6 @@ Vue.component('father', {
 有时候，子组件只是需要父组件给他一个初始值，不想让父组件来改变他,可以定义一个局部变量，并用 prop 的值初始化它
 
 或者需要数据进行处理，然后跟随父组件变化，可以使用计算属性
-
-
 
 ```
 Vue.component('father', {
@@ -210,7 +216,7 @@ Vue.component('father', {
 });
 ```
 
-## prop数据的绑定和固定数据
+## prop 数据的绑定和固定数据
 
 ```
 <son :sNum="fNum" sNum2="fNum"></son>
@@ -221,8 +227,7 @@ sNum是父组件数据的绑定
 sNum2只是获得了一个字符传，里面的东西统统都是字符串，而不是表达式，可以理解为组件的静态属性吧
 ```
 
-上面说到子组件无法直接改变父组件的值，有时候又确实要改变的可以使用emit来通知父组件自己改变了，同时传递给父组件自己改变后的值，然后父组件可以接受这个值，然后进行改变
-
+上面说到子组件无法直接改变父组件的值，有时候又确实要改变的可以使用 emit 来通知父组件自己改变了，同时传递给父组件自己改变后的值，然后父组件可以接受这个值，然后进行改变
 
 > 子组件已经和它外部完全解耦了。它所做的只是报告自己的内部事件，因为父组件可能会关心这些事件
 
@@ -259,11 +264,11 @@ Vue.component('father', {
 });
 ```
 
-## sync语法糖
+## sync 语法糖
 
 有时候只是简单的实现下数据同步，并不对数据做处理，而父组件还要为了这个么简单的一个功能写一个函数来处理，实在是太麻烦
 
-其实是有sync这个语法糖的，同时很直观的能看到这个数据是双向绑定的
+其实是有 sync 这个语法糖的，同时很直观的能看到这个数据是双向绑定的
 
 ```
 <comp :foo.sync="bar"></comp>
@@ -300,7 +305,7 @@ Vue.component('father', {
 
 ## 不同组件之间通信
 
-不同组件之间的数据共享还好办，data返回同一个Object就行了
+不同组件之间的数据共享还好办，data 返回同一个 Object 就行了
 
 之间通信的话就需要借助一个中间人，
 
@@ -364,8 +369,6 @@ Vue.component('father', {
 
 引用组件时候，在组件标签内写的内容是会被覆盖的，即无效
 
-
-
 ```
 <div id="app">
     <comp>
@@ -383,7 +386,7 @@ Vue.component('father', {
 </script>
 ```
 
-可以通过slot来将标签内的内容传递到组件模板中
+可以通过 slot 来将标签内的内容传递到组件模板中
 
 ```
 <div id="app">
@@ -402,9 +405,9 @@ Vue.component('father', {
 </script>
 ```
 
-当然，把标签内的作为一个整体作为一个slot还是不太自由,可以为slot起名字，根据名字引用
+当然，把标签内的作为一个整体作为一个 slot 还是不太自由,可以为 slot 起名字，根据名字引用
 
-直接slot代表的是所有没有名字的slot
+直接 slot 代表的是所有没有名字的 slot
 
 ```
 <div id="app">
