--- a/_posts/2016-03-01-腾讯云主机初始化.md
+++ b/_posts/2016-03-01-腾讯云主机初始化.md
@@ -190,6 +190,14 @@ yum install cmake bison-devel ncurses-devel autoconf automake zlib* fiex* libxml
 	service sshd restart后再ssh相互连接发现很快
 	```
 
+## tab只能补全第一个参数
+
+```
+echo $SHELL # 确认使用的是/bin/bash而不是/bin/sh
+yum install bash-completion # 安增强插件
+exit # 再次进入终端生效
+```
+
 ## 安装桌面环境/可选
 
 默认最小化安装，在安装系统的时候没有安装桌面组件
