--- a/_posts/2018-01-10-vue组件学习.md
+++ b/_posts/2018-01-10-vue组件学习.md
@@ -18,12 +18,12 @@ categories: [前端]
 
 ```
 Vue.component('my-component', {
-    template: '<div @click="num++">{{num}}</div>',
-    data() {
-        return {
-            num: 0
-        }
+  template: '<div @click="num++">{{num}}</div>',
+  data() {
+    return {
+      num: 0
     }
+  }
 });
 ```
 
@@ -31,12 +31,12 @@ Vue.component('my-component', {
 
 ```
 var myComponent = Vue.extend({
-    template: '<div @click="num++">{{num}}</div>',
-    data() {
-        return {
-            num: 0
-        }
+  template: '<div @click="num++">{{num}}</div>',
+  data() {
+    return {
+      num: 0
     }
+  }
 });
 
 Vue.component('my-component', myComponent);
@@ -49,9 +49,7 @@ Vue.extend 是构造一个组件的语法器
 Vue.component 是注册组件的，注册标签便于在模板中使用，如果不需要标签可以不注册，如一些插件直接使用代码创建实例即可
 
 ```
-var apple = Vue.extend({
-    ....
-})
+var apple = Vue.extend({ ... })
 // 注册组件,在模板中使用apple标签
 Vue.component('apple',apple)
 // 直接在代码中获得组件实例
@@ -68,7 +66,7 @@ console.log(a.$el)
 
 ```
 <script type="x-template" id="myComponent">
-    <div @click="num++">{{num}}</div>
+  <div @click="num++">{{num}}</div>
 </script>
 
 template: '#myComponent'
@@ -78,7 +76,7 @@ template: '#myComponent'
 
 ```
 <template id="myComponent">
-    <div @click="num++">{{num}}</div>
+  <div @click="num++">{{num}}</div>
 </template>
 
 template: '#myComponent'
@@ -88,24 +86,24 @@ template: '#myComponent'
 
 ```
 <div id="app">
-    <input type="button" @click="cpName='my-component-1'" value="使用my-component-1渲染">
-    <input type="button" @click="cpName='my-component-2'" value="使用my-component-2渲染">
-    <component :is="cpName"></component>
+  <input type="button" @click="cpName='my-component-1'" value="使用my-component-1渲染">
+  <input type="button" @click="cpName='my-component-2'" value="使用my-component-2渲染">
+  <component :is="cpName"></component>
 </div>
 
 <script>
-    Vue.component('my-component-1', {
-        template: '<div>我是组件1</div>'
-    });
-    Vue.component('my-component-2', {
-        template: '<div>我是组件2</div>'
-    });
-    var vm = new Vue({
-        el: '#app',
-        data: {
-            cpName: 'my-component-1'
-        }
-    });
+  Vue.component('my-component-1', {
+    template: '<div>我是组件1</div>'
+  });
+  Vue.component('my-component-2', {
+    template: '<div>我是组件2</div>'
+  });
+  var vm = new Vue({
+    el: '#app',
+    data: {
+      cpName: 'my-component-1'
+    }
+  });
 </script>
 ```
 
@@ -115,15 +113,15 @@ template: '#myComponent'
 
 ```
 <keep-alive>
-    <component :is="currentView">
-    <!-- 非活动组件将被缓存！ -->
-    </component>
+  <component :is="currentView">
+  <!-- 非活动组件将被缓存！ -->
+  </component>
 </keep-alive>
 ```
 
 ## 父子组件
 
-注意子组件必须在父组件的模板中使用而不是嵌套
+注意子组件必须在父组件的模板中使用而不是嵌套,嵌套是 slot
 
 ```
 错误写法
@@ -139,229 +137,22 @@ template: '#myComponent'
 
 ```
 <div id="app">
-    <father></father>
+  <father></father>
 </div>
 
 <script>
-    Vue.component('father', {
-        template: '<div>我是父组件<son></son></div>',
-        components: {
-            'son': {
-                template: '<div>我是子组件</div>'
-            }
-        }
-    });
-
-    var vm = new Vue({
-        el: '#app'
-    });
-</script>
-```
-
-## 父子组建通信
-
-组件实例的作用域是孤立的。这意味着不能 (也不应该) 在子组件的模板内直接引用父组件的数据。父组件的数据需要通过 prop 才能下发到子组件中
-
-点击父组件，子组件绑定了父组件的数据也会随之改变
-
-但是点击子组件，子组件改变，父组件不改变，点击一下父组件，子组件会和父组件同步。这样试图用子组件来改变父组件的数据是不行的，子组件的数据虽然变化了，但是会被父组件的变化给覆盖，而且控制台还会有警告子组件的值有会被覆盖的风险
-
-![01.png](01.png)
-
-```
-Vue.component('father', {
-    data: function () {
-        return {
-            fNum: 1
-        }
-    },
-    template: '<div><div @click="fNum++">我是父组件{{fNum}}</div><son :sNum="fNum"></son></div>',
-    components: {
+  Vue.component('father', {
+    template: '<div>我是父组件<son></son></div>',
+      components: {
         'son': {
-            props: ['sNum'],
-            template: '<div @click="sNum++">我是子组件{{sNum}}</div>',
+          template: '<div>我是子组件</div>'
         }
-    }
-});
-```
+      }
+  });
 
-有时候，子组件只是需要父组件给他一个初始值，不想让父组件来改变他,可以定义一个局部变量，并用 prop 的值初始化它
-
-或者需要数据进行处理，然后跟随父组件变化，可以使用计算属性
-
-```
-Vue.component('father', {
-    data: function () {
-        return {
-            fNum: 1
-        }
-    },
-    template: '<div><div @click="fNum++">我是父组件{{fNum}}</div><son :sNum="fNum"></son></div>',
-    components: {
-        'son': {
-            props: ['sNum'],
-            data() {
-                return {
-                    sNumCopy: this.sNum
-                }
-            },
-            computed: {
-                fNumM2() {
-                    return this.sNum * 2;
-                }
-            },
-            template: '<div @click="sNumCopy++">我是子组件{{sNumCopy}}，{{fNumM2}}</div>',
-        }
-    }
-});
-```
-
-## prop 数据的绑定和固定数据
-
-```
-<son :sNum="fNum" sNum2="fNum"></son>
-props: ['sNum',sNum2]
-
-sNum是父组件数据的绑定
-
-sNum2只是获得了一个字符传，里面的东西统统都是字符串，而不是表达式，可以理解为组件的静态属性吧
-```
-
-上面说到子组件无法直接改变父组件的值，有时候又确实要改变的可以使用 emit 来通知父组件自己改变了，同时传递给父组件自己改变后的值，然后父组件可以接受这个值，然后进行改变
-
-> 子组件已经和它外部完全解耦了。它所做的只是报告自己的内部事件，因为父组件可能会关心这些事件
-
-```
-Vue.component('father', {
-    data: function () {
-        return {
-            fNum: 1
-        }
-    },
-    methods: {
-        fFunc(a) {
-            this.fNum = a;
-        }
-    },
-    template: '<div><div @click="fNum++">我是父组件{{fNum}}</div><son @notice="fFunc" :sNum="fNum"></son></div>',
-    components: {
-        'son': {
-            props: ['sNum'],
-            data() {
-                return {
-                    sNumCopy: this.sNum
-                }
-            },
-            template: '<div @click="sClick">我是子组件{{sNumCopy}}</div>',
-            methods: {
-                sClick() {
-                    this.sNumCopy++;
-                    this.$emit('notice', this.sNumCopy);
-                }
-            },
-        }
-    }
-});
-```
-
-## sync 语法糖
-
-有时候只是简单的实现下数据同步，并不对数据做处理，而父组件还要为了这个么简单的一个功能写一个函数来处理，实在是太麻烦
-
-其实是有 sync 这个语法糖的，同时很直观的能看到这个数据是双向绑定的
-
-```
-<comp :foo.sync="bar"></comp>
-会被vue自动扩展为
-<comp :foo="bar" @update:foo="val => bar = val"></comp>
-当子组件需要更新 foo 的值时，它需要显式地触发一个更新事件
-this.$emit('update:foo', newValue)
-```
-
-案例如下
-
-```
-Vue.component('father', {
-    data: function () {
-        return {
-            fNum: 1
-        }
-    },
-    template: '<div><div @click="fNum++">我是父组件{{fNum}}</div><son :sNum.sync="fNum"></son></div>',
-    components: {
-        'son': {
-            props: ['sNum'],
-            template: '<div @click="sUpdate">我是子组件{{sNum}}</div>',
-            methods: {
-                sUpdate() {
-                    this.sNum++;
-                    this.$emit('update:sNum', this.sNum)
-                }
-            }
-        }
-    }
-});
-```
-
-## 不同组件之间通信
-
-不同组件之间的数据共享还好办，data 返回同一个 Object 就行了
-
-之间通信的话就需要借助一个中间人，
-
-```
-<div id="app">
-    <comp1></comp1>
-    <comp2></comp2>
-</div>
-
-<script>
-    var hub = new Vue(); //创建事件中心
-
-    Vue.component('comp1', {
-        data() {
-            return {
-                num: 1
-            }
-        },
-        methods: {
-            comp2Change() {
-                hub.$emit('comp2Change');
-            }
-        },
-        mounted: function () {
-            hub.$on('comp1Change', function () {
-                this.num++;
-            }.bind(this))
-        },
-        template: '<div @click="comp2Change">{{num}}</div>'
-    });
-    Vue.component('comp2', {
-        data() {
-            return {
-                num: 1
-            }
-        },
-        methods: {
-            comp1Change() {
-                hub.$emit('comp1Change');
-            }
-        },
-        mounted: function () {
-            hub.$on('comp1Change', function () {
-                this.num++;
-            }.bind(this))
-        },
-        mounted: function () {
-            hub.$on('comp2Change', function () {
-                this.num++;
-            }.bind(this))
-        },
-        template: '<div @click="comp1Change">{{num}}</div>'
-    });
-    var vm = new Vue({
-        el: '#app'
-    });
+  var vm = new Vue({
+    el: '#app'
+  });
 </script>
 ```
 
@@ -371,18 +162,18 @@ Vue.component('father', {
 
 ```
 <div id="app">
-    <comp>
-        <span>World</span>
-    </comp>
+  <comp>
+    <span>World</span>
+  </comp>
 </div>
 
 <script>
-    Vue.component('comp', {
-        template: '<div>Hello</div>'
-    });
-    var vm = new Vue({
-        el: '#app'
-    });
+  Vue.component('comp', {
+    template: '<div>Hello</div>'
+  });
+  var vm = new Vue({
+    el: '#app'
+  });
 </script>
 ```
 
@@ -390,18 +181,18 @@ Vue.component('father', {
 
 ```
 <div id="app">
-    <comp>
-        <span>World</span>
-    </comp>
+  <comp>
+    <span>World</span>
+  </comp>
 </div>
 
 <script>
-    Vue.component('comp', {
-        template: '<div>Hello<slot></slot></div>'
-    });
-    var vm = new Vue({
-        el: '#app'
-    });
+  Vue.component('comp', {
+    template: '<div>Hello<slot></slot></div>'
+  });
+  var vm = new Vue({
+    el: '#app'
+  });
 </script>
 ```
 
@@ -411,23 +202,204 @@ Vue.component('father', {
 
 ```
 <div id="app">
-    <comp>
-        <span slot='s1'>World</span>
-        <span slot='s2'>!!!</span>
-    </comp>
+  <comp>
+    <span slot='s1'>World</span>
+    <span slot='s2'>!!!</span>
+  </comp>
 </div>
 
 <script>
-    Vue.component('comp', {
-        data() {
-            return {
-                name: " Ming"
-            }
-        },
-        template: '<div>Hello<slot name="s2"></slot><slot name="s1"></slot></div>'
-    });
-    var vm = new Vue({
-        el: '#app'
-    });
+  Vue.component('comp', {
+    data() {
+      return {
+        name: " Ming"
+      }
+    },
+    template: '<div>Hello<slot name="s2"></slot><slot name="s1"></slot></div>'
+  });
+  var vm = new Vue({
+    el: '#app'
+  });
+</script>
+```
+
+## 使用 prop 向组件传递数据
+
+分为静态数据和动态数据，静态的就是一个字符串常量，动态的可以指定为父组件的 data 中数据
+
+当让，动态的可以指定为一个数字，因为动态的实质就是一个表达式
+
+当子组件需要一个对象传入且不想修改这个对象而影响到父组件，可以在自己的 data 返回 prop 中的一些属性
+
+```
+<son :sNum="fNum" sNum2="fNum"></son>
+props: ['sNum',sNum2]
+```
+
+## prop 的数据流向
+
+父子组件之间通过动态 prop 传递数据是单向数据流，即父组件的数据改变会影响到子组件，子组件改变 prop 中的数据而不会影响到父组件
+
+这句话是不对严谨的，**对于一个数组或对象类型的 prop 来说，子组件改变 prop 也会影响到父组件**，因为 JavaScript 中对象和数组是通过引用传入的
+
+在父组件改变数据时候，子组件跟着改变，但是子组件改变 data1 会报错（单向数据流），改变 data2 父组件也会收到影响
+
+![01.png](01.png)
+
+```
+Vue.component('father', {
+  data: function() {
+    return {
+      data1: -10,
+      data2: {
+        number: 0
+      }
+    }
+  },
+  template:`<div>
+    <span @click="data1++">{{data1}}</span>
+    <span @click="data2.number++">{{data2.number}}</span>
+    <son :data1="data1" :data2="data2"></son>
+  </div>`,
+  components: {
+    son: {
+      props: ['data1','data2'],
+      template: `<div>
+        <span @click="data1++">{{data1}}</span>
+        <span @click="data2.number++">{{data2.number}}</span>
+      </div>`
+    }
+  }
+})
+```
+
+## 父子组件通讯的正确方式
+
+综上，当 prop 为数组和对象的时候会影响到父组件破坏了单项数据流
+
+同时，按照道理来讲，子组件不应该直接修改这些状态，因为会影响到父组件
+
+所以正确的方式是子组件触发父组件的事件，然后在父组件中改变各个数据，然后会自动传递到子组件
+
+- 通过 emit 来调用父组件的方法
+
+```
+Vue.component('father', {
+  data: function() {
+    return {
+      fNum: 1
+    }
+  },
+  methods: {
+    fFunc() {
+      this.fNum++
+    }
+  },
+  template:
+    '<div><div @click="fNum++">我是父组件{{fNum}}</div><son @noticeF="fFunc" :fNum="fNum"></son></div>',
+  components: {
+    son: {
+      props: ['fNum'],
+      template: '<div @click="sClick">我是子组件{{fNum}}</div>',
+      methods: {
+        sClick() {
+          this.$emit('noticeF')
+        }
+      }
+    }
+  }
+})
+```
+
+- sync 语法糖
+
+上面的 emit 可以通过使用 sync 语法糖来简化
+
+```
+Vue.component('father', {
+  data: function() {
+    return {
+      fNum: 1
+    }
+  },
+  template:
+    '<div><div @click="fNum++">我是父组件{{fNum}}</div><son :fNum.sync="fNum"></son></div>',
+  components: {
+    son: {
+      props: ['fNum'],
+      template: '<div @click="sClick">我是子组件{{fNum}}</div>',
+      methods: {
+        sClick() {
+          this.$emit('update:fNum', this.fNum + 1)
+        }
+      }
+    }
+  }
+})
+```
+
+可以看出 Vue 替你在父组件内声明和了一个`update:fNum`函数，该函数只有有一个参数用于更新父组件的值
+
+## 不同组件之间通信
+
+在一些大项目中会有大量的组件，不同组件都有自己的状态且之间能够互相通信
+
+为了方便之间的数据通信，Vue 官方推荐的是使用 Vuex 对组件的状态数据进行统一管理
+
+如果项目较小我们也可以自己实现不同组件之间的通信，首先为了便于管理，我们应该把不同组件的数据集中定义（Vuex 就是这样）
+
+一般是于最外层的父组件中统一定义，然后层层向上 emit，为了简化这种操作，Vue 也提供了 hub 的方式，类似于中间人的角色一样
+
+```
+<div id="app">
+  <comp1></comp1>
+  <comp2></comp2>
+</div>
+
+<script>
+//创建事件中心
+var hub = new Vue()
+hub.$on('event1', data => {
+  alert(data)
+})
+
+// 组件1
+Vue.component('comp1', {
+  data() {
+    return {
+      num: 1
+    }
+  },
+  methods: {
+    click() {
+      // 触发hub中的的事件
+      hub.$emit('event1', 666)
+      hub.$emit('comp2Func', 666)
+    }
+  },
+  template: '<div @click="click">{{num}}</div>'
+})
+// 组件2
+Vue.component('comp2', {
+  data() {
+    return {
+      num: 1
+    }
+  },
+  mounted: function() {
+    let _this = this
+    // 在hub中定义事件，之所以在组件2里面定义就是为了this
+    hub.$on(
+      'comp2Func',
+      function(data) {
+        this.num = data
+      }.bind(_this)
+    )
+  },
+  template: '<div>{{num}}</div>'
+})
+var vm = new Vue({
+  el: '#app'
+})
 </script>
 ```
