--- a/_posts/2019-03-10-消灭病毒游戏抓包破解.md
+++ b/_posts/2019-03-10-消灭病毒游戏抓包破解.md
@@ -6,9 +6,9 @@ categories: [破解]
 
 最近无聊打发时间喜欢玩下消灭病毒，发现后期升级武器金币太高了升不动了
 
-网上搜了下，似乎还没有破解教程，贴吧里都是淘宝付费刷上去的，具体原理不知，可能是内部人员改数据库，也能也是抓包修改数据
+网上搜了下，似乎还没有破解教程。本文应该是网上第一篇破解消灭病毒游戏的全过程了
 
-本文应该是第一篇破解教程了，需要相关计算机知识
+不过贴吧里说淘宝上可以刷金币，好像还不用登陆微信号，不是骗子的话应该是内部人员修改数据库
 
 ## 抓包
 
