--- a/_posts/2019-03-10-消灭病毒游戏抓包破解.md
+++ b/_posts/2019-03-10-消灭病毒游戏抓包破解.md
@@ -8,7 +8,7 @@ categories: [破解]
 
 网上搜了下，似乎还没有破解教程。本文应该是网上第一篇破解消灭病毒游戏的全过程了
 
-不过贴吧里说淘宝上可以刷金币，好像还不用登陆微信号，不是骗子的话应该是内部人员修改数据库
+顺便写了个一键修改的工具（点击游戏中的齿轮获得 ID），[点我在线修改](http://java.tmaize.net/wx_tmaize/xmbd/index.html)，后端代码见后面
 
 ## 抓包
 
@@ -92,3 +92,73 @@ post 成功
 重新打开游戏,发现数据已修改。如若失败是因为服务端数据还没下载到本地，本地的数据覆盖了服务端数据。最简单的办法是，当抓完包后，删除这个小程序，禁止它上传数据，当伪造数据 post 修改数据成功后，在下载下来，肯定是会先向服务端拿数据的
 
 ![12](12.jpg)
+
+## Java 版本的修改工具
+
+主程序
+
+```java
+public static void main(String[] args) throws Exception {
+  RequestBuilder rb = Requests.post("https://wxwyjh.chiji-h5.com/api/archive/get");
+  Map<String, String> header = new HashMap<String, String>();
+  header.put("content-type", "application/x-www-form-urlencoded");
+  header.put("User-Agent", "Mozilla/5.0 (Linux; Android 9; MIX 2S Build/PKQ1.180729.001; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/71.0.3578.99 Mobile Safari/537.36 MicroMessenger/7.0.3.1400(0x2700033B) Process/appbrand2 NetType/WIFI Language/zh_CN");
+  header.put("Host", "wxwyjh.chiji-h5.com");
+  rb.headers(header);
+
+  Map<String, String> data = new HashMap<String, String>();
+  data.put("plat", "wx");
+  data.put("time", String.valueOf(new Date().getTime()));
+  data.put("openid", "**************");
+  data.put("sign", sign(data));
+  rb.body(JSON.toJSONString(data));
+  Map<?, ?> currentData = rb.send().readToJson(Map.class);
+
+  if (!currentData.get("code").toString().equals("0")) {
+    throw new Exception("获取当前记录失败");
+  }
+  System.out.println(currentData);
+  Map<String, String> data2 = new HashMap<String, String>();
+  data2.put("plat", data.get("plat"));
+  data2.put("time", String.valueOf(new Date().getTime()));
+  data2.put("openid", data.get("openid"));
+  Map<?, ?> temp = (Map<?, ?>) currentData.get("data");
+  // 不要打乱顺序，
+  LinkedHashMap<String, Object> record = JSON.parseObject(temp.get("record").toString(), LinkedHashMap.class);
+  // record.put("money", "9979029121");
+  data2.put("record", JSON.toJSONString(record));
+  data2.put("sign", sign(data2));
+
+  RequestBuilder rb2 = Requests.post("https://wxwyjh.chiji-h5.com/api/archive/upload");
+  rb2.headers(header);
+  rb2.body(JSON.toJSONString(data2));
+
+  Map<?, ?> updatedData = rb2.send().readToJson(Map.class);
+  if (!updatedData.get("code").toString().equals("0")) {
+    throw new Exception("修改记录失败");
+  }
+}
+```
+
+加密代码
+
+```java
+public static String sign(Map<String, String> map) {
+  Map<String, String> newMap = new HashMap<String, String>();
+  List<String> keys = new ArrayList<String>();
+  for (String key : map.keySet()) {
+    keys.add(key);
+    newMap.put(key, map.get(key));
+  }
+  newMap.put("wx_appid", "wxa2c324b63b2a9e5e");
+  newMap.put("wx_secret", "8fbd540d0b23197df1d5095f0d6ee46d");
+  keys.add("wx_appid");
+  keys.add("wx_secret");
+  Collections.sort(keys);
+  StringBuilder sb = new StringBuilder();
+  for (String key : keys) {
+    sb.append(key).append("=").append(newMap.get(key)).append("&");
+  }
+  return HashKit.md5(sb.substring(0, sb.length() - 1));
+}
+```
