--- a/_posts/2019-03-10-消灭病毒游戏抓包破解.md
+++ b/_posts/2019-03-10-消灭病毒游戏抓包破解.md
@@ -6,9 +6,7 @@ categories: [破解]
 
 最近无聊打发时间喜欢玩下消灭病毒，发现后期升级武器金币太高了升不动了
 
-网上搜了下，似乎还没有破解教程。本文应该是网上第一篇破解消灭病毒游戏的全过程了
-
-顺便写了个一键修改的工具（点击游戏中的齿轮获得 ID），[点我在线修改](http://java.tmaize.net/wx_tmaize/xmbd/index.html)，后端代码见后面
+网上搜了下，似乎还没有破解教程。顺便写了个一键修改的工具（点击游戏中的齿轮获得 ID），[点我在线修改](http://java.tmaize.net/wx_tmaize/xmbd/index.html)，后端代码见后面
 
 ## 抓包
 
