--- a/_posts/2019-03-09-ngrok搭建内网穿透服务.md
+++ b/_posts/2019-03-09-ngrok搭建内网穿透服务.md
@@ -54,13 +54,13 @@ cp ~/ca/server.key ~/ngrok/assets/server/tls/snakeoil.key
 
 ```
 # 编译客户端，windows系统上用
-GOOS=windows
-GOARCH=amd64
+export GOOS=windows
+export GOARCH=amd64
 make release-client
 
 # 编译服务端
-GOOS=linux
-GOARCH=amd64
+export GOOS=linux
+export GOARCH=amd64
 make release-server
 ```
 
