--- a/_posts/2018-07-28-GO的包管理和构建.md
+++ b/_posts/2018-07-28-GO的包管理和构建.md
@@ -108,6 +108,14 @@ GO 编译器依次会去 GOROOT/src，GOPATH1/src，GOPATH2/src ... 下去我们
 
 所以又有了 godep，glide，govendor 等工具
 
+## golang.org 的官方依赖无法安装
+
+由于网络原因一些 golang.org 下的包无法，比如`go get -u golang.org/x/tools/`
+
+其实是可以从 github 下载的，在 GOPATH 下的 src 目录下新建`golang.org/x`再在下面使用`git clone`拉取 github 上的镜像就行了
+
+镜像地址：[https://github.com/golang](https://github.com/golang)
+
 ## 项目构建
 
 项目构建全靠 GOPATH，因此就要将这个项目添加到 GOPATH
