修改文章，添加友链

--- a/_posts/2019-03-10-消灭病毒游戏抓包破解.md
+++ b/_posts/2019-03-10-消灭病毒游戏抓包破解.md
@@ -4,9 +4,9 @@ title: 消灭病毒游戏抓包破解
 categories: [破解]
 ---
 
-最近无聊打发时间喜欢玩下消灭病毒，发现后期升级武器金币太高了升不动了
+最近无聊打发时间喜欢玩下消灭病毒，发现后期升级武器金币太高了升不动了。网上搜了下，似乎还没有破解教程，这里记录下我的修改过程，后端代码见后面
 
-网上搜了下，似乎还没有破解教程。顺便写了个一键修改的工具（点击游戏中的齿轮获得 ID），[点我在线修改](http://java.tmaize.net/wx_tmaize/xmbd/index.html)，后端代码见后面
+PS：2019/04/09 游戏升级，复制出来的ID加密了，工具已删除，不过实际使用的还是openid(老ID)
 
 ## 抓包
 
