添加文章，旧文章重新排版

--- a/_posts/2016-03-01-腾讯云主机初始化.md
+++ b/_posts/2016-03-01-腾讯云主机初始化.md
@@ -118,6 +118,7 @@ bash install.sh
 ```
 yum groupinstall -y "Development Tools"
 yum install cmake bison-devel ncurses-devel autoconf automake zlib* fiex* libxml* libmcrypt* libtool-ltdl-devel*
+yum -y install openssl openssl-devel
 ```
 
 ## 开启SSH服务
