--- a/_posts/2019-04-21-go-web项目打包为一个文件.md
+++ b/_posts/2019-04-21-go-web项目打包为一个文件.md
@@ -62,6 +62,14 @@ func main() {
 
 可以看到引入了生成的`data.go`，最终在`http.FileServer`中传入自己实现的文件系统，使得在访问文件时找到对应的字符编码，再转换为文件流
 
+## 说明
+
+`go-bindata`是一个工具，使用把静态文件生成 go 代码，文件以 byte 数组的形式存在，项目并不依赖改项目，而是依赖该工具生成的 go 文件
+
+`go-bindata-assetfs`是文件系统接口的实现，从生成的 go 文件中拿文件数据
+
+如果只需要简单地读文件,可以不使用`go-bindata-assetfs`，因为`go-bindata`生成的 go 文件本身提供的一些方法返回文件的`[]byte`内容，可以根据需求自已去拿
+
 ## 总结
 
 静态文件一共 30M，最终打包生成了 19M 的文件，这也算是一个优点了
