--- a/_posts/2019-05-14-HTTP包默认路由匹配规则.md
+++ b/_posts/2019-05-14-HTTP包默认路由匹配规则.md
@@ -154,15 +154,16 @@ func (mux *ServeMux) match(path string) (h Handler, pattern string) {
 
 综上源码，匹配规则如下
 
-先判断完全匹配
+- 先判断完全匹配
 
-再判断重定向，如果你定义了`/p/`,而没有定义`/p`，访问`host+/p`会发现直接匹配`/p`匹配不到，而`/p/`的规则是存在的，会重定向到`host+/p/`
+- 再判断重定向，如果你定义了`/p/`,而没有定义`/p`，访问`host+/p`会发现直接匹配`/p`匹配不到，而`/p/`的规则是存在的，会重定向到`host+/p/`
 
-最后在判断最长匹配，最长匹配的数组来自所有以`/`结尾的规则
+- 最后在判断最长匹配，最长匹配的数组来自所有以`/`结尾的规则
 
 其实可以打印出`http.DefaultServeMux`看下 m 和 es,本例中的如下
 
 ```go
-// &{{{0 0} 0 0 0 0} map[/:{0x6402b0 /} /path/:{0x640370 /path/} /path/subpath:{0x640430 /path/subpath}] [{0x640370 /path/} {0x6402b0 /}] false}
+// map[/:{0x6402b0 /} /path/:{0x640370 /path/} /path/subpath:{0x640430 /path/subpath}]
+// [{0x640370 /path/} {0x6402b0 /}]
 fmt.Println(http.DefaultServeMux)
 ```
