--- a/_posts/2019-05-14-HTTP包默认路由匹配规则.md
+++ b/_posts/2019-05-14-HTTP包默认路由匹配规则.md
@@ -167,3 +167,9 @@ func (mux *ServeMux) match(path string) (h Handler, pattern string) {
 // [{0x640370 /path/} {0x6402b0 /}]
 fmt.Println(http.DefaultServeMux)
 ```
+
+## 参考
+
+年代久远，文章中的源码都过时了
+
+[GOLANG 中 HTTP 包默认路由匹配规则阅读笔记](https://studygolang.com/resources/4657)
